# propnet

./: README.md  setup.cfg
propnet/: entity.py
