[metadata]
name = propnet
version = 0.0a0
license = MIT License
author = Xingyu Bao
author_email = baoxingyubob@outlook.com
description = 
    Use network tools to flexibly describe the relations
    between each properties of an entity.


[options]
zip_safe = False
packages = find:
install_requires =
    networkx
